--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.shloakaggarwal.helmetbandapp.MainActivity">
 
-
     <Button
         android:id="@+id/connectionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:text="Connection"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="16dp" />
@@ -22,10 +23,9 @@
         android:id="@+id/receivingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="133dp"
-        android:layout_marginTop="34dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
         android:text="Receiving"
         tools:layout_editor_absoluteX="200dp"
         tools:layout_editor_absoluteY="16dp" />
@@ -34,10 +34,9 @@
         android:id="@+id/callButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="172dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"
         android:text="Call" />
 
 </RelativeLayout>
